--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <title>React App</title>
    </head>
 
-   <body class="bg-info">
+   <body class="bg-secondary">
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
       <!--
